// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager/dockerfile/update updateDependency handles similar FROM 1`] = `
"FROM debian:wheezy@sha256:abcdefghijklmnop as stage-1
RUN something
FROM debian:wheezy@sha256:abcdefghijklmnop
RUN something else"
`;

exports[`manager/dockerfile/update updateDependency handles strange whitespace 1`] = `
"# comment FROM node:8
FROM node:8@sha256:abcdefghijklmnop as base
RUN something
"
`;

exports[`manager/dockerfile/update updateDependency replaces COPY --from 1`] = `
"FROM scratch
COPY --from=gcr.io/k8s-skaffold/skaffold:v0.12.0 /usr/bin/skaffold /usr/bin/skaffold
"
`;

exports[`manager/dockerfile/update updateDependency replaces existing value 1`] = `
"# comment FROM node:8
FROM node:8.1-alpine@sha256:abcdefghijklmnop
RUN something
"
`;

exports[`manager/dockerfile/update updateDependency replaces existing value with suffix 1`] = `
"# comment FROM node:8
FROM node:8@sha256:abcdefghijklmnop as base
RUN something
"
`;
